<resources>
    <string name="app_name">MathGame</string>
    <string name="task">Task:</string>
    <string name="your_pictures">Your pictures</string>
    <string name="ok">OK</string>
    <string name="history">History</string>
    <string name="button_play_text">Play</string>
    <string name="button_settings_text">Settings</string>
    <string name="addition">Addition (+)</string>
    <string name="subtraction">Subtraction (-)</string>
    <string name="multiplication">Multiplication (x)</string>
    <string name="division">Division (÷)</string>
    <string name="title_topics">Topics</string>
    <string name="title_levels">Levels</string>
    <string name="go_to_the_next_task">Go to the next task</string>
    <string name="title_results">Results</string>
    <string name="correct">Correct:</string>
    <string name="mistakes">Mistakes:</string>
    <string name="skipped">Skipped:</string>
    <string name="go_to_the_next_question">Go to the next question</string>
    <string name="show_results">Show results</string>
    <string name="music">Music</string>
    <string name="sounds">Sounds</string>
    <string name="language">Language:</string>
    <string name="language_current">english</string>
    <string name="button_restart">Button repeat level</string>
    <string name="button_go_back_to_all_levels">Button go back to all levels</string>
    <string name="button_go_to_the_next_level">Button go to the next level</string>
    <string name="loading_went_wrong">Loading went wrong…</string>
    <string name="congratulations_the_level_is_passed">Congratulations!\nThe level is finished :)</string>
    <string name="correct_answer">Correct :)</string>
    <string name="you_did_not_write_anything">You did not write anything…</string>
    <string name="wrong">Wrong :(</string>
    <string name="the_correct_answer_is">"The correct answer is: "</string>
    <string name="launcher_image">Launcher image</string>
    <string name="time">Time:</string>
    <string name="topic">Topic:</string>
    <string name="level">Level:</string>
    <string name="click_me">Click me</string>
    <string name="choose_date">Choose date:</string>
    <string name="day_after"><![CDATA[>>>]]></string>
    <string name="day_before"><![CDATA[<<<]]></string>
    <string name="open_calendar">Open calendar</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="button_check_your_answer">Check your answer</string>
    <string name="your_answer">Your answer</string>
</resources>