<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".presentation.fragments.HistoryFragment">

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="32dp"
        android:paddingBottom="24dp"
        android:singleLine="true"
        android:text="@string/choose_date"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/day_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="4dp"
            android:clickable="true"
            android:focusable="true"
            android:singleLine="true"
            android:text="@string/day_before"
            android:textColor="@color/black"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:shadowColor="@color/blue_light"
            android:shadowRadius="40"
            android:singleLine="true"
            android:text="@string/today"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/day_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="0dp"
            android:clickable="true"
            android:focusable="true"
            android:singleLine="true"
            android:text="@string/day_after"
            android:textColor="@color/black"
            android:textSize="36sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/calendar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:elevation="-4dp"
        android:contentDescription="@string/open_calendar"
        android:focusable="true"
        android:src="@drawable/icon_calendar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="1"
        tools:listitem="@layout/element_record" />

</LinearLayout>