<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.fragments.TopicsFragment">

    <TextView
        android:id="@+id/title_topics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_topics"
        android:textSize="55sp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h25">

        <TextView
            android:id="@+id/button_addition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:shadowColor="@color/green"
            android:shadowRadius="40"
            android:singleLine="true"
            android:text="@string/addition"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/button_subtraction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:shadowColor="@color/red"
            android:shadowRadius="40"
            android:singleLine="true"
            android:text="@string/subtraction"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/button_multiplication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:shadowColor="@color/blue"
            android:shadowRadius="40"
            android:singleLine="true"
            android:text="@string/multiplication"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/button_division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:shadowColor="@color/orange"
            android:shadowRadius="40"
            android:singleLine="true"
            android:text="@string/division"
            android:textColor="@color/black"
            android:textSize="40sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>