<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.fragments.ResultsFragment">

    <TextView
        android:id="@+id/title_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@color/purple"
        android:shadowRadius="40"
        android:singleLine="true"
        android:text="@string/title_results"
        android:textColor="@color/blue"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/green"
                android:shadowRadius="40"
                android:singleLine="true"
                android:text="@string/correct"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/correct_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:shadowColor="@color/green"
                android:shadowRadius="40"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:text="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mistakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/red"
                android:shadowRadius="40"
                android:singleLine="true"
                android:text="@string/mistakes"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/mistakes_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:shadowColor="@color/red"
                android:shadowRadius="40"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:text="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/skipped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/yellow"
                android:shadowRadius="40"
                android:singleLine="true"
                android:text="@string/skipped"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/skipped_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:shadowColor="@color/yellow"
                android:shadowRadius="40"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:text="1" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/button_all_levels"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/button_go_back_to_all_levels"
        android:src="@drawable/all_levels"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h65"
        app:layout_constraintWidth_percent="0.2" />

    <ImageView
        android:id="@+id/button_restart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/restart"
        android:contentDescription="@string/button_restart"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h65"
        app:layout_constraintWidth_percent="0.2" />

    <ImageView
        android:id="@+id/button_next_level"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="40dp"
        android:clickable="true"
        android:contentDescription="@string/button_go_to_the_next_level"
        android:focusable="true"
        android:src="@drawable/next_level"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h65"
        app:layout_constraintWidth_percent="0.2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>