<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline_h65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_h30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/blue"
                android:shadowRadius="40"
                android:singleLine="true"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:shadowColor="@color/blue"
                android:shadowRadius="40"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:text="12:00" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/pink"
                android:shadowRadius="40"
                android:singleLine="true"
                tools:text="@string/topic"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/topic_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:shadowColor="@color/pink"
                android:shadowRadius="40"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:text="Addition" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/purple"
                android:shadowRadius="40"
                android:singleLine="true"
                tools:text="@string/level"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/level_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:shadowColor="@color/purple"
                android:shadowRadius="40"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:text="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/green"
                android:shadowRadius="40"
                android:singleLine="true"
                android:text="@string/correct"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/correct_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:shadowColor="@color/green"
                android:shadowRadius="40"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:text="7" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mistakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/red"
                android:shadowRadius="40"
                android:singleLine="true"
                android:text="@string/mistakes"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/mistakes_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:shadowColor="@color/red"
                android:shadowRadius="40"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:text="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/skipped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/yellow"
                android:shadowRadius="40"
                android:singleLine="true"
                android:text="@string/skipped"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/skipped_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:shadowColor="@color/yellow"
                android:shadowRadius="40"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                tools:text="1" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>